// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthScreen renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#fff",
      "flex": 1,
    }
  }
>
  <View
    style={Object {}}
  >
    <Image
      source={
        Object {
          "uri": "https://source.unsplash.com/random/800x600",
        }
      }
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexGrow": 1,
            "height": 250,
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "white",
            "fontSize": 35,
            "letterSpacing": 5,
            "textAlign": "center",
          }
        }
      >
        HELLO
      </Text>
    </Image>
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingVertical": 40,
      }
    }
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hasTVPreferredFocus={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          undefined,
        ]
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#9E9E9E",
              "flexDirection": "row",
              "justifyContent": "center",
              "marginLeft": 15,
              "marginRight": 15,
              "padding": 19,
            },
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            Object {
              "padding": 12,
            },
            Array [
              Object {
                "backgroundColor": "#fff",
                "borderColor": "rgba(0,0,0,0.40)",
                "borderRadius": 25,
                "borderWidth": 0.5,
                "minWidth": 120,
              },
              Object {
                "backgroundColor": "rgba(0,0,0,0.40)",
                "borderColor": "#fff",
              },
            ],
            undefined,
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {},
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              Array [
                Object {
                  "color": "white",
                  "fontSize": 20,
                },
                undefined,
                Object {
                  "fontSize": 17.5,
                },
                undefined,
                Array [
                  Object {
                    "color": "rgba(0,0,0,0.40)",
                    "fontSize": 14,
                  },
                  Object {
                    "color": "#fff",
                  },
                ],
                undefined,
                undefined,
              ],
            ]
          }
        >
          Sign Up
        </Text>
      </View>
    </View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hasTVPreferredFocus={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          undefined,
        ]
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#9E9E9E",
              "flexDirection": "row",
              "justifyContent": "center",
              "marginLeft": 15,
              "marginRight": 15,
              "padding": 19,
            },
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            Object {
              "padding": 12,
            },
            Array [
              Object {
                "backgroundColor": "#fff",
                "borderColor": "rgba(0,0,0,0.40)",
                "borderRadius": 25,
                "borderWidth": 0.5,
                "minWidth": 120,
              },
              null,
            ],
            undefined,
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {},
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              Array [
                Object {
                  "color": "white",
                  "fontSize": 20,
                },
                undefined,
                Object {
                  "fontSize": 17.5,
                },
                undefined,
                Array [
                  Object {
                    "color": "rgba(0,0,0,0.40)",
                    "fontSize": 14,
                  },
                  null,
                ],
                undefined,
                undefined,
              ],
            ]
          }
        >
          Log In
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "marginBottom": 15,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "paddingHorizontal": 15,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "borderBottomWidth": 0.5,
            "borderColor": "rgba(0,0,0,0.40)",
            "flexDirection": "row",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {},
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              Object {
                "color": "#000",
                "fontWeight": "normal",
                "marginRight": 15,
                "paddingVertical": 10,
              },
            ]
          }
        >
          Name
        </Text>
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <TextInput
            onChangeText={[Function]}
            style={
              Object {
                "flex": 1,
                "textAlign": "right",
              }
            }
            value={undefined}
          />
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderBottomWidth": 0.5,
            "borderColor": "rgba(0,0,0,0.40)",
            "flexDirection": "row",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {},
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              Object {
                "color": "#000",
                "fontWeight": "normal",
                "marginRight": 15,
                "paddingVertical": 10,
              },
            ]
          }
        >
          Email
        </Text>
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <TextInput
            keyboardType="email-address"
            onChangeText={[Function]}
            style={
              Object {
                "flex": 1,
                "textAlign": "right",
              }
            }
            value={undefined}
          />
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderBottomWidth": 0.5,
            "borderColor": "rgba(0,0,0,0.40)",
            "flexDirection": "row",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {},
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              Object {
                "color": "#000",
                "fontWeight": "normal",
                "marginRight": 15,
                "paddingVertical": 10,
              },
            ]
          }
        >
          Phone Number
        </Text>
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <TextInput
            keyboardType="phone-pad"
            onChangeText={[Function]}
            style={
              Object {
                "flex": 1,
                "textAlign": "right",
              }
            }
            value={undefined}
          />
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderBottomWidth": 0.5,
            "borderColor": "rgba(0,0,0,0.40)",
            "flexDirection": "row",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {},
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              Object {
                "color": "#000",
                "fontWeight": "normal",
                "marginRight": 15,
                "paddingVertical": 10,
              },
            ]
          }
        >
          Password
        </Text>
        <TextInput
          onChangeText={[Function]}
          secureTextEntry={true}
          style={
            Object {
              "flex": 1,
              "textAlign": "right",
            }
          }
          value={undefined}
        />
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderBottomWidth": 0.5,
              "borderColor": "rgba(0,0,0,0.40)",
              "flexDirection": "row",
            },
            Object {
              "marginBottom": 20,
            },
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {},
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              Object {
                "color": "#000",
                "fontWeight": "normal",
                "marginRight": 15,
                "paddingVertical": 10,
              },
            ]
          }
        >
          Confirm Password
        </Text>
        <TextInput
          onChangeText={[Function]}
          secureTextEntry={true}
          style={
            Object {
              "flex": 1,
              "textAlign": "right",
            }
          }
          value={undefined}
        />
      </View>
    </View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hasTVPreferredFocus={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          undefined,
        ]
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#9E9E9E",
              "flexDirection": "row",
              "justifyContent": "center",
              "marginLeft": 15,
              "marginRight": 15,
              "padding": 19,
            },
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            Object {
              "padding": 12,
            },
            Object {
              "backgroundColor": "#000",
            },
            undefined,
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {},
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              Array [
                Object {
                  "color": "white",
                  "fontSize": 20,
                },
                undefined,
                Object {
                  "fontSize": 17.5,
                },
                undefined,
                undefined,
                undefined,
                undefined,
              ],
            ]
          }
        >
          Create Account
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`AuthScreen renders correctly with enzyme 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <View
    style={
        Object {
            "backgroundColor": "#fff",
            "flex": 1,
          }
    }
>
    <View
        style={Object {}}
    >
        <Image
            source={
                Object {
                    "uri": "https://source.unsplash.com/random/800x600",
                  }
            }
            style={
                Array [
                    Object {
                      "alignItems": "center",
                      "flexGrow": 1,
                      "height": 250,
                      "justifyContent": "center",
                    },
                  ]
            }
        >
            <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                    Object {
                        "backgroundColor": "transparent",
                        "color": "white",
                        "fontSize": 35,
                        "letterSpacing": 5,
                        "textAlign": "center",
                      }
                }
            >
                HELLO
            </Text>
        </Image>
    </View>
    <View
        style={
            Object {
                "flexDirection": "row",
                "justifyContent": "center",
                "paddingVertical": 40,
              }
        }
    >
        <Button
            buttonStyle={
                Array [
                    Object {
                      "backgroundColor": "#fff",
                      "borderColor": "rgba(0,0,0,0.40)",
                      "borderRadius": 25,
                      "borderWidth": 0.5,
                      "minWidth": 120,
                    },
                    Object {
                      "backgroundColor": "rgba(0,0,0,0.40)",
                      "borderColor": "#fff",
                    },
                  ]
            }
            onPress={[Function]}
            textStyle={
                Array [
                    Object {
                      "color": "rgba(0,0,0,0.40)",
                      "fontSize": 14,
                    },
                    Object {
                      "color": "#fff",
                    },
                  ]
            }
            title="Sign Up"
        />
        <Button
            buttonStyle={
                Array [
                    Object {
                      "backgroundColor": "#fff",
                      "borderColor": "rgba(0,0,0,0.40)",
                      "borderRadius": 25,
                      "borderWidth": 0.5,
                      "minWidth": 120,
                    },
                    null,
                  ]
            }
            onPress={[Function]}
            textStyle={
                Array [
                    Object {
                      "color": "rgba(0,0,0,0.40)",
                      "fontSize": 14,
                    },
                    null,
                  ]
            }
            title="Log In"
        />
    </View>
    <SignUpForm />
</View>,
  "nodes": Array [
    <View
      style={
            Object {
                  "backgroundColor": "#fff",
                  "flex": 1,
                }
      }
>
      <View
            style={Object {}}
      >
            <Image
                  source={
                        Object {
                              "uri": "https://source.unsplash.com/random/800x600",
                            }
                  }
                  style={
                        Array [
                              Object {
                                "alignItems": "center",
                                "flexGrow": 1,
                                "height": 250,
                                "justifyContent": "center",
                              },
                            ]
                  }
            >
                  <Text
                        accessible={true}
                        allowFontScaling={true}
                        ellipsizeMode="tail"
                        style={
                              Object {
                                    "backgroundColor": "transparent",
                                    "color": "white",
                                    "fontSize": 35,
                                    "letterSpacing": 5,
                                    "textAlign": "center",
                                  }
                        }
                  >
                        HELLO
                  </Text>
            </Image>
      </View>
      <View
            style={
                  Object {
                        "flexDirection": "row",
                        "justifyContent": "center",
                        "paddingVertical": 40,
                      }
            }
      >
            <Button
                  buttonStyle={
                        Array [
                              Object {
                                "backgroundColor": "#fff",
                                "borderColor": "rgba(0,0,0,0.40)",
                                "borderRadius": 25,
                                "borderWidth": 0.5,
                                "minWidth": 120,
                              },
                              Object {
                                "backgroundColor": "rgba(0,0,0,0.40)",
                                "borderColor": "#fff",
                              },
                            ]
                  }
                  onPress={[Function]}
                  textStyle={
                        Array [
                              Object {
                                "color": "rgba(0,0,0,0.40)",
                                "fontSize": 14,
                              },
                              Object {
                                "color": "#fff",
                              },
                            ]
                  }
                  title="Sign Up"
            />
            <Button
                  buttonStyle={
                        Array [
                              Object {
                                "backgroundColor": "#fff",
                                "borderColor": "rgba(0,0,0,0.40)",
                                "borderRadius": 25,
                                "borderWidth": 0.5,
                                "minWidth": 120,
                              },
                              null,
                            ]
                  }
                  onPress={[Function]}
                  textStyle={
                        Array [
                              Object {
                                "color": "rgba(0,0,0,0.40)",
                                "fontSize": 14,
                              },
                              null,
                            ]
                  }
                  title="Log In"
            />
      </View>
      <SignUpForm />
</View>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <AuthScreen />,
      "_debugID": 94,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": AuthScreen {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "openSignInForm": [Function],
        "openSignUpForm": [Function],
        "props": Object {},
        "refs": Object {},
        "state": Object {
          "signUp": true,
        },
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <View
          style={
                    Object {
                              "backgroundColor": "#fff",
                              "flex": 1,
                            }
          }
>
          <View
                    style={Object {}}
          >
                    <Image
                              source={
                                        Object {
                                                  "uri": "https://source.unsplash.com/random/800x600",
                                                }
                              }
                              style={
                                        Array [
                                                  Object {
                                                    "alignItems": "center",
                                                    "flexGrow": 1,
                                                    "height": 250,
                                                    "justifyContent": "center",
                                                  },
                                                ]
                              }
                    >
                              <Text
                                        accessible={true}
                                        allowFontScaling={true}
                                        ellipsizeMode="tail"
                                        style={
                                                  Object {
                                                            "backgroundColor": "transparent",
                                                            "color": "white",
                                                            "fontSize": 35,
                                                            "letterSpacing": 5,
                                                            "textAlign": "center",
                                                          }
                                        }
                              >
                                        HELLO
                              </Text>
                    </Image>
          </View>
          <View
                    style={
                              Object {
                                        "flexDirection": "row",
                                        "justifyContent": "center",
                                        "paddingVertical": 40,
                                      }
                    }
          >
                    <Button
                              buttonStyle={
                                        Array [
                                                  Object {
                                                    "backgroundColor": "#fff",
                                                    "borderColor": "rgba(0,0,0,0.40)",
                                                    "borderRadius": 25,
                                                    "borderWidth": 0.5,
                                                    "minWidth": 120,
                                                  },
                                                  Object {
                                                    "backgroundColor": "rgba(0,0,0,0.40)",
                                                    "borderColor": "#fff",
                                                  },
                                                ]
                              }
                              onPress={[Function]}
                              textStyle={
                                        Array [
                                                  Object {
                                                    "color": "rgba(0,0,0,0.40)",
                                                    "fontSize": 14,
                                                  },
                                                  Object {
                                                    "color": "#fff",
                                                  },
                                                ]
                              }
                              title="Sign Up"
                    />
                    <Button
                              buttonStyle={
                                        Array [
                                                  Object {
                                                    "backgroundColor": "#fff",
                                                    "borderColor": "rgba(0,0,0,0.40)",
                                                    "borderRadius": 25,
                                                    "borderWidth": 0.5,
                                                    "minWidth": 120,
                                                  },
                                                  null,
                                                ]
                              }
                              onPress={[Function]}
                              textStyle={
                                        Array [
                                                  Object {
                                                    "color": "rgba(0,0,0,0.40)",
                                                    "fontSize": 14,
                                                  },
                                                  null,
                                                ]
                              }
                              title="Log In"
                    />
          </View>
          <SignUpForm />
</View>,
        "_debugID": 95,
        "_renderedOutput": <View
          style={
                    Object {
                              "backgroundColor": "#fff",
                              "flex": 1,
                            }
          }
>
          <View
                    style={Object {}}
          >
                    <Image
                              source={
                                        Object {
                                                  "uri": "https://source.unsplash.com/random/800x600",
                                                }
                              }
                              style={
                                        Array [
                                                  Object {
                                                    "alignItems": "center",
                                                    "flexGrow": 1,
                                                    "height": 250,
                                                    "justifyContent": "center",
                                                  },
                                                ]
                              }
                    >
                              <Text
                                        accessible={true}
                                        allowFontScaling={true}
                                        ellipsizeMode="tail"
                                        style={
                                                  Object {
                                                            "backgroundColor": "transparent",
                                                            "color": "white",
                                                            "fontSize": 35,
                                                            "letterSpacing": 5,
                                                            "textAlign": "center",
                                                          }
                                        }
                              >
                                        HELLO
                              </Text>
                    </Image>
          </View>
          <View
                    style={
                              Object {
                                        "flexDirection": "row",
                                        "justifyContent": "center",
                                        "paddingVertical": 40,
                                      }
                    }
          >
                    <Button
                              buttonStyle={
                                        Array [
                                                  Object {
                                                    "backgroundColor": "#fff",
                                                    "borderColor": "rgba(0,0,0,0.40)",
                                                    "borderRadius": 25,
                                                    "borderWidth": 0.5,
                                                    "minWidth": 120,
                                                  },
                                                  Object {
                                                    "backgroundColor": "rgba(0,0,0,0.40)",
                                                    "borderColor": "#fff",
                                                  },
                                                ]
                              }
                              onPress={[Function]}
                              textStyle={
                                        Array [
                                                  Object {
                                                    "color": "rgba(0,0,0,0.40)",
                                                    "fontSize": 14,
                                                  },
                                                  Object {
                                                    "color": "#fff",
                                                  },
                                                ]
                              }
                              title="Sign Up"
                    />
                    <Button
                              buttonStyle={
                                        Array [
                                                  Object {
                                                    "backgroundColor": "#fff",
                                                    "borderColor": "rgba(0,0,0,0.40)",
                                                    "borderRadius": 25,
                                                    "borderWidth": 0.5,
                                                    "minWidth": 120,
                                                  },
                                                  null,
                                                ]
                              }
                              onPress={[Function]}
                              textStyle={
                                        Array [
                                                  Object {
                                                    "color": "rgba(0,0,0,0.40)",
                                                    "fontSize": 14,
                                                  },
                                                  null,
                                                ]
                              }
                              title="Log In"
                    />
          </View>
          <SignUpForm />
</View>,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <AuthScreen />,
}
`;

exports[`AuthScreen renders correctly with enzyme and redux-mock-store 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <View
    style={
        Object {
            "backgroundColor": "#fff",
            "flex": 1,
          }
    }
>
    <View
        style={Object {}}
    >
        <Image
            source={
                Object {
                    "uri": "https://source.unsplash.com/random/800x600",
                  }
            }
            style={
                Array [
                    Object {
                      "alignItems": "center",
                      "flexGrow": 1,
                      "height": 250,
                      "justifyContent": "center",
                    },
                  ]
            }
        >
            <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                    Object {
                        "backgroundColor": "transparent",
                        "color": "white",
                        "fontSize": 35,
                        "letterSpacing": 5,
                        "textAlign": "center",
                      }
                }
            >
                HELLO
            </Text>
        </Image>
    </View>
    <View
        style={
            Object {
                "flexDirection": "row",
                "justifyContent": "center",
                "paddingVertical": 40,
              }
        }
    >
        <Button
            buttonStyle={
                Array [
                    Object {
                      "backgroundColor": "#fff",
                      "borderColor": "rgba(0,0,0,0.40)",
                      "borderRadius": 25,
                      "borderWidth": 0.5,
                      "minWidth": 120,
                    },
                    Object {
                      "backgroundColor": "rgba(0,0,0,0.40)",
                      "borderColor": "#fff",
                    },
                  ]
            }
            onPress={[Function]}
            textStyle={
                Array [
                    Object {
                      "color": "rgba(0,0,0,0.40)",
                      "fontSize": 14,
                    },
                    Object {
                      "color": "#fff",
                    },
                  ]
            }
            title="Sign Up"
        />
        <Button
            buttonStyle={
                Array [
                    Object {
                      "backgroundColor": "#fff",
                      "borderColor": "rgba(0,0,0,0.40)",
                      "borderRadius": 25,
                      "borderWidth": 0.5,
                      "minWidth": 120,
                    },
                    null,
                  ]
            }
            onPress={[Function]}
            textStyle={
                Array [
                    Object {
                      "color": "rgba(0,0,0,0.40)",
                      "fontSize": 14,
                    },
                    null,
                  ]
            }
            title="Log In"
        />
    </View>
    <SignUpForm />
</View>,
  "nodes": Array [
    <View
      style={
            Object {
                  "backgroundColor": "#fff",
                  "flex": 1,
                }
      }
>
      <View
            style={Object {}}
      >
            <Image
                  source={
                        Object {
                              "uri": "https://source.unsplash.com/random/800x600",
                            }
                  }
                  style={
                        Array [
                              Object {
                                "alignItems": "center",
                                "flexGrow": 1,
                                "height": 250,
                                "justifyContent": "center",
                              },
                            ]
                  }
            >
                  <Text
                        accessible={true}
                        allowFontScaling={true}
                        ellipsizeMode="tail"
                        style={
                              Object {
                                    "backgroundColor": "transparent",
                                    "color": "white",
                                    "fontSize": 35,
                                    "letterSpacing": 5,
                                    "textAlign": "center",
                                  }
                        }
                  >
                        HELLO
                  </Text>
            </Image>
      </View>
      <View
            style={
                  Object {
                        "flexDirection": "row",
                        "justifyContent": "center",
                        "paddingVertical": 40,
                      }
            }
      >
            <Button
                  buttonStyle={
                        Array [
                              Object {
                                "backgroundColor": "#fff",
                                "borderColor": "rgba(0,0,0,0.40)",
                                "borderRadius": 25,
                                "borderWidth": 0.5,
                                "minWidth": 120,
                              },
                              Object {
                                "backgroundColor": "rgba(0,0,0,0.40)",
                                "borderColor": "#fff",
                              },
                            ]
                  }
                  onPress={[Function]}
                  textStyle={
                        Array [
                              Object {
                                "color": "rgba(0,0,0,0.40)",
                                "fontSize": 14,
                              },
                              Object {
                                "color": "#fff",
                              },
                            ]
                  }
                  title="Sign Up"
            />
            <Button
                  buttonStyle={
                        Array [
                              Object {
                                "backgroundColor": "#fff",
                                "borderColor": "rgba(0,0,0,0.40)",
                                "borderRadius": 25,
                                "borderWidth": 0.5,
                                "minWidth": 120,
                              },
                              null,
                            ]
                  }
                  onPress={[Function]}
                  textStyle={
                        Array [
                              Object {
                                "color": "rgba(0,0,0,0.40)",
                                "fontSize": 14,
                              },
                              null,
                            ]
                  }
                  title="Log In"
            />
      </View>
      <SignUpForm />
</View>,
  ],
  "options": Object {
    "context": Object {
      "store": [Function],
    },
  },
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {
        "store": [Function],
      },
      "_currentElement": <AuthScreen />,
      "_debugID": 96,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": AuthScreen {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "openSignInForm": [Function],
        "openSignUpForm": [Function],
        "props": Object {},
        "refs": Object {},
        "state": Object {
          "signUp": true,
        },
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 2,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <View
          style={
                    Object {
                              "backgroundColor": "#fff",
                              "flex": 1,
                            }
          }
>
          <View
                    style={Object {}}
          >
                    <Image
                              source={
                                        Object {
                                                  "uri": "https://source.unsplash.com/random/800x600",
                                                }
                              }
                              style={
                                        Array [
                                                  Object {
                                                    "alignItems": "center",
                                                    "flexGrow": 1,
                                                    "height": 250,
                                                    "justifyContent": "center",
                                                  },
                                                ]
                              }
                    >
                              <Text
                                        accessible={true}
                                        allowFontScaling={true}
                                        ellipsizeMode="tail"
                                        style={
                                                  Object {
                                                            "backgroundColor": "transparent",
                                                            "color": "white",
                                                            "fontSize": 35,
                                                            "letterSpacing": 5,
                                                            "textAlign": "center",
                                                          }
                                        }
                              >
                                        HELLO
                              </Text>
                    </Image>
          </View>
          <View
                    style={
                              Object {
                                        "flexDirection": "row",
                                        "justifyContent": "center",
                                        "paddingVertical": 40,
                                      }
                    }
          >
                    <Button
                              buttonStyle={
                                        Array [
                                                  Object {
                                                    "backgroundColor": "#fff",
                                                    "borderColor": "rgba(0,0,0,0.40)",
                                                    "borderRadius": 25,
                                                    "borderWidth": 0.5,
                                                    "minWidth": 120,
                                                  },
                                                  Object {
                                                    "backgroundColor": "rgba(0,0,0,0.40)",
                                                    "borderColor": "#fff",
                                                  },
                                                ]
                              }
                              onPress={[Function]}
                              textStyle={
                                        Array [
                                                  Object {
                                                    "color": "rgba(0,0,0,0.40)",
                                                    "fontSize": 14,
                                                  },
                                                  Object {
                                                    "color": "#fff",
                                                  },
                                                ]
                              }
                              title="Sign Up"
                    />
                    <Button
                              buttonStyle={
                                        Array [
                                                  Object {
                                                    "backgroundColor": "#fff",
                                                    "borderColor": "rgba(0,0,0,0.40)",
                                                    "borderRadius": 25,
                                                    "borderWidth": 0.5,
                                                    "minWidth": 120,
                                                  },
                                                  null,
                                                ]
                              }
                              onPress={[Function]}
                              textStyle={
                                        Array [
                                                  Object {
                                                    "color": "rgba(0,0,0,0.40)",
                                                    "fontSize": 14,
                                                  },
                                                  null,
                                                ]
                              }
                              title="Log In"
                    />
          </View>
          <SignUpForm />
</View>,
        "_debugID": 97,
        "_renderedOutput": <View
          style={
                    Object {
                              "backgroundColor": "#fff",
                              "flex": 1,
                            }
          }
>
          <View
                    style={Object {}}
          >
                    <Image
                              source={
                                        Object {
                                                  "uri": "https://source.unsplash.com/random/800x600",
                                                }
                              }
                              style={
                                        Array [
                                                  Object {
                                                    "alignItems": "center",
                                                    "flexGrow": 1,
                                                    "height": 250,
                                                    "justifyContent": "center",
                                                  },
                                                ]
                              }
                    >
                              <Text
                                        accessible={true}
                                        allowFontScaling={true}
                                        ellipsizeMode="tail"
                                        style={
                                                  Object {
                                                            "backgroundColor": "transparent",
                                                            "color": "white",
                                                            "fontSize": 35,
                                                            "letterSpacing": 5,
                                                            "textAlign": "center",
                                                          }
                                        }
                              >
                                        HELLO
                              </Text>
                    </Image>
          </View>
          <View
                    style={
                              Object {
                                        "flexDirection": "row",
                                        "justifyContent": "center",
                                        "paddingVertical": 40,
                                      }
                    }
          >
                    <Button
                              buttonStyle={
                                        Array [
                                                  Object {
                                                    "backgroundColor": "#fff",
                                                    "borderColor": "rgba(0,0,0,0.40)",
                                                    "borderRadius": 25,
                                                    "borderWidth": 0.5,
                                                    "minWidth": 120,
                                                  },
                                                  Object {
                                                    "backgroundColor": "rgba(0,0,0,0.40)",
                                                    "borderColor": "#fff",
                                                  },
                                                ]
                              }
                              onPress={[Function]}
                              textStyle={
                                        Array [
                                                  Object {
                                                    "color": "rgba(0,0,0,0.40)",
                                                    "fontSize": 14,
                                                  },
                                                  Object {
                                                    "color": "#fff",
                                                  },
                                                ]
                              }
                              title="Sign Up"
                    />
                    <Button
                              buttonStyle={
                                        Array [
                                                  Object {
                                                    "backgroundColor": "#fff",
                                                    "borderColor": "rgba(0,0,0,0.40)",
                                                    "borderRadius": 25,
                                                    "borderWidth": 0.5,
                                                    "minWidth": 120,
                                                  },
                                                  null,
                                                ]
                              }
                              onPress={[Function]}
                              textStyle={
                                        Array [
                                                  Object {
                                                    "color": "rgba(0,0,0,0.40)",
                                                    "fontSize": 14,
                                                  },
                                                  null,
                                                ]
                              }
                              title="Log In"
                    />
          </View>
          <SignUpForm />
</View>,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <AuthScreen />,
}
`;

exports[`AuthScreen sinon spy example, function calls correctly 1`] = `Array []`;
